--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>backend</artifactId>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.version>5.3.9</spring.version>
