changed DBConfig and added HikariCP

--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -5,13 +5,14 @@ hibernate.connection.username=root
 hibernate.connection.password=root1!
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
-hibernate.connection.provider_class=org.hibernate.connection.C3P0ConnectionProvider
+hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 
-hibernate.entity.package=com.softserve.entity
-
-#C3P0 properties
-hibernate.c3p0.min_size=5
-hibernate.c3p0.max_size=20
-hibernate.c3p0.acquire_increment=1
-hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=150
+dataSource.minimumIdle=5
+dataSource.maximumPoolSize=20
+dataSource.idleTimeout=30000
+dataSource.connectionTimeout=30000
+dataSource.cachePrepStmts=true
+dataSource.prepStmtCacheSize=250
+dataSource.prepStmtCacheSqlLimit=2048
+dataSource.useServerPrepStmts=true
+dataSource.useLocalSessionState=true
