--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -4,7 +4,10 @@ hibernate.connection.url=jdbc:mysql://localhost:3306/book_catalog
 hibernate.connection.username=root
 hibernate.connection.password=root1!
 hibernate.show_sql=true
+hibernate.format_sql=true
+hibernate.use_sql_comments=true
 hibernate.hbm2ddl.auto=update
+hibernate.enable_lazy_load_no_trans=true
 hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 
 dataSource.minimumIdle=5
