--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -7,15 +7,15 @@ hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
 hibernate.hbm2ddl.auto=update
-hibernate.enable_lazy_load_no_trans=true
-hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+#hibernate.enable_lazy_load_no_trans=true
 
-dataSource.minimumIdle=5
-dataSource.maximumPoolSize=20
-dataSource.idleTimeout=30000
-dataSource.connectionTimeout=30000
-dataSource.cachePrepStmts=true
-dataSource.prepStmtCacheSize=250
-dataSource.prepStmtCacheSqlLimit=2048
-dataSource.useServerPrepStmts=true
-dataSource.useLocalSessionState=true
+#hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+#dataSource.minimumIdle=5
+#dataSource.maximumPoolSize=20
+#dataSource.idleTimeout=30000
+#dataSource.connectionTimeout=30000
+#dataSource.cachePrepStmts=true
+#dataSource.prepStmtCacheSize=250
+#dataSource.prepStmtCacheSqlLimit=2048
+#dataSource.useServerPrepStmts=true
+#dataSource.useLocalSessionState=true
