--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -9,6 +9,12 @@ hibernate.use_sql_comments=true
 hibernate.hbm2ddl.auto=update
 #hibernate.enable_lazy_load_no_trans=true
 
+hibernate.c3p0.min_size=5
+hibernate.c3p0.max_size=20
+hibernate.c3p0.acquire_increment=1
+hibernate.c3p0.timeout=1800
+hibernate.c3p0.max_statements=150
+
 #hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
 #dataSource.minimumIdle=5
 #dataSource.maximumPoolSize=20
