--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </properties>
 
     <build>
-        <finalName>test</finalName>
+        <finalName>catalog</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
