--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -10,6 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>frontend</artifactId>
+  <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,21 +20,6 @@
 
   <build>
     <plugins>
-
-      <!--      <plugin>-->
-      <!--        <artifactId>maven-clean-plugin</artifactId>-->
-      <!--        <version>2.5</version>-->
-      <!--        <configuration>-->
-      <!--          <filesets>-->
-      <!--            <fileset>-->
-      <!--              <directory>dist</directory>-->
-      <!--              <includes>-->
-      <!--                <include>*</include>-->
-      <!--              </includes>-->
-      <!--            </fileset>-->
-      <!--          </filesets>-->
-      <!--        </configuration>-->
-      <!--      </plugin>-->
 
       <plugin>
         <groupId>com.github.eirslett</groupId>
