--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ng-select/ng-select": "^7.2.0",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "ng-multiselect-dropdown": "^0.3.4",
