--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -3,25 +3,13 @@ hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/book_catalog
 hibernate.connection.username=root
 hibernate.connection.password=root1!
-hibernate.show_sql=true
-hibernate.format_sql=true
-hibernate.use_sql_comments=true
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.use_sql_comments=false
 hibernate.hbm2ddl.auto=update
-#hibernate.enable_lazy_load_no_trans=true
 
 hibernate.c3p0.min_size=5
 hibernate.c3p0.max_size=20
 hibernate.c3p0.acquire_increment=1
 hibernate.c3p0.timeout=1800
 hibernate.c3p0.max_statements=150
-
-#hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
-#dataSource.minimumIdle=5
-#dataSource.maximumPoolSize=20
-#dataSource.idleTimeout=30000
-#dataSource.connectionTimeout=30000
-#dataSource.cachePrepStmts=true
-#dataSource.prepStmtCacheSize=250
-#dataSource.prepStmtCacheSqlLimit=2048
-#dataSource.useServerPrepStmts=true
-#dataSource.useLocalSessionState=true
