--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap-icons": "^1.5.0",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-mask": "^12.0.0",
+    "ngx-mat-select-search": "^3.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
