changed title for widget with count books, changed hibernate.properties, added logo for application

--- a/backend/src/main/resources/hibernate.properties
+++ b/backend/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/book_catalog
-hibernate.connection.username=shuma
-hibernate.connection.password=qaz123wsx
+hibernate.connection.username=root
+hibernate.connection.password=root1!
 hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
