--- a/jenkins-file.yml
+++ b/jenkins-file.yml
@@ -12,7 +12,7 @@ pipeline {
           }
         }
       }
-    stage ('Build') {
+    stage ('Medium Build') {
       steps {
         echo "Build step..."
         }
