--- a/jenkins-file.yml
+++ b/jenkins-file.yml
@@ -2,6 +2,18 @@ pipeline {
   agent any
   stages{
     
+    stage ('Build') {
+      steps {
+        'mvn clean package'
+        }
+        post {
+          success {
+            echo "Archiving..."
+            archiveArtifacts artifacts:'**/target/*.war'
+          }
+        }
+      }
+    
     stage ('Medium Build') {
       steps {
         echo "Build step..."
