--- a/jenkins-file.yml
+++ b/jenkins-file.yml
@@ -4,7 +4,7 @@ pipeline {
     
     stage ('Build') {
       steps {
-        'mvn clean package'
+        mvn clean package
         }
         post {
           success {
