--- a/jenkins-file.yml
+++ b/jenkins-file.yml
@@ -4,7 +4,8 @@ pipeline {
     
     stage ('Build') {
       steps {
-        mvn clean package
+        mvn clean
+        mvn package
         }
         post {
           success {
